--- a/.github/workflows/trigger-jenkins.yml
+++ b/.github/workflows/trigger-jenkins.yml
@@ -5,60 +5,41 @@ on:
     branches: [main]
 
 jobs:
-  pull_repo:
-    name: Pull GitHub Repository Contents and Deploy to Jenkins
+  pull_repo_and_deploy:
+    name: Pull GitHub Repository Contents and Deploy
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up SSH key
-        uses: webfactory/ssh-agent@v0.5.4
-        with:
-          ssh-private-key: ${{ secrets.YUSUFKEY }}
-
-      - name: SSH to the first instance
-        run: |
-          ssh -o StrictHostKeyChecking=no -i $SSH_PRIVATE_KEY ubuntu@3.75.180.85 '
-
-      # Login to Docker Hub and build/push Docker image for the first instance
-      - name: Login to Docker Hub
-        uses: docker/login-action@v1
+      - name: Build and Push Docker image
+        uses: docker/build-push-action@v2
         with:
           username: ${{ secrets.YUSUFME3 }}
           password: ${{ secrets.YUSUFME3P }}
+          repository: yusufme3/yr-apache-image
+          tag_with_ref: true
 
-      - name: Build Docker image for first instance
-        run: docker build -t yusufme3/yr-apache-image:latest .
-
-      - name: Push Docker image for first instance
-        run: docker push yusufme3/yr-apache-image:latest
-
-      # Exit from the first instance
-      - name: Exit from first instance
-        run: exit
-
-      # Setup SSH for the second instance (same key)
-      - name: Create SSH directory for second instance
+      - name: Create SSH directory for the second instance
         run: mkdir -p ~/.ssh
 
-      - name: Write private key for second instance to file
+      - name: Write private key to file for the second instance
         run: echo "${{ secrets.YUSUFKEY }}" > ~/.ssh/RHY.pem
 
-      - name: Set permissions for private key file for second instance
+      - name: Set permissions for private key file for the second instance
         run: chmod 600 ~/.ssh/RHY.pem
 
-      - name: Update known_hosts file for second instance
+      - name: Update known_hosts file for the second instance
         run: ssh-keyscan -H 3.72.74.84 >> ~/.ssh/known_hosts
 
-      # SSH to the second instance and pull Docker image
-      - name: SSH to second instance and pull Docker image
-        run: |
-          ssh -i ~/.ssh/RHY.pem user@3.72.74.84 'docker pull yusufme3/yr-apache-image:latest'
+      - name: SSH into the second instance
+        run: ssh -i ~/.ssh/RHY.pem ubuntu@3.72.74.84
 
-      # Trigger Jenkins Pipeline on the first instance
-      - name: Trigger Jenkins Pipeline on first instance
+      - name: Pull Docker image onto the second instance
+        run: docker pull yusufme3/yr-apache-image:latest
+
+      - name: Trigger Jenkins Pipeline
         run: |
           curl -X POST \
             -u YusufRiyad:111e297342cff6b975e53e2c71e1a79f59 \
