--- a/.github/workflows/trigger-jenkins.yml
+++ b/.github/workflows/trigger-jenkins.yml
@@ -23,7 +23,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          repository: yusufme3/yr-apache-image
+          repository: yusufme3/yr-apache-image:latest
           tag_with_ref: true
 
       - name: Create SSH directory
