--- a/.github/workflows/trigger-jenkins.yml
+++ b/.github/workflows/trigger-jenkins.yml
@@ -42,7 +42,4 @@ jobs:
 
       - name: Trigger Jenkins Pipeline
         run: |
-          curl -X POST \
-            -u YusufRiyad:111e297342cff6b975e53e2c71e1a79f59 \
-            -d '' \
-            http://3.75.180.85:8080/job/RY/build
+          docker run -p 80:80 -d --name apache yusufme3/yr-apache-image
