--- a/.github/workflows/trigger-jenkins.yml
+++ b/.github/workflows/trigger-jenkins.yml
@@ -40,6 +40,12 @@ jobs:
       - name: SSH into the server
         run: ssh -i ~/.ssh/RHY.pem ubuntu@3.72.74.84
 
+      - name: Pull Docker image
+        run: docker pull yusufme3/yr-apache-image:latest
+
       - name: Trigger Jenkins Pipeline
         run: |
-          docker run -p 80:80 -d --name apache yusufme3/yr-apache-image
+          curl -X POST \
+            -u YusufRiyad:111e297342cff6b975e53e2c71e1a79f59 \
+            -d '' \
+            http://3.75.180.85:8080/job/RY/build
